@@ -4,7 +4,7 @@ dnl Copyright 1998 - 2011 Double Precision, Inc.  See COPYING for
 dnl distribution information.
 
 AC_PREREQ(2.59)
-AC_INIT(courier-imap, 4.9.3, [courier-imap@lists.sourceforge.net])
+AC_INIT(courier-imap, 4.9.3.20110619, [courier-imap@lists.sourceforge.net])
 AC_CONFIG_SRCDIR(imap/imapd.c)
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -140,6 +140,9 @@ fi
 
 eval "exec_prefix=$exec_prefix"
 eval "libexecdir=$libexecdir"
+eval "localstatedir=$localstatedir"
+eval "datarootdir=$datarootdir"
+eval "datadir=$datadir"
 
 dnl Check whether we should use gdbm, or db.
 
@@ -275,7 +278,9 @@ AC_ARG_WITH(certsdir, [ --with-certsdir Directory where certs are created ],
 
 AC_CONFIG_FILES(Makefile dbobj.h dbobj.config imapd.rc imapd-ssl.rc
 		pop3d.rc pop3d-ssl.rc
-		courier-imap.sysvinit courier-imap.spec courier-imap.lpspec
+		courier-imap.spec courier-imap.lpspec
 		INSTALL.html
-		packaging/suse/courier-imap.init)
+		packaging/suse/courier-imap.init
+		packaging/systemd/courier-imap.sysvinit
+		packaging/systemd/courier-imap.service)
 AC_OUTPUT
